--- a/css/style.css
+++ b/css/style.css
@@ -28,6 +28,9 @@ a:hover {
 p {
   margin: 1rem;
  }
+ button {
+  border: none;
+ }
 
 .header__container {
   padding: 20px 60px 6px 60px;
@@ -180,11 +183,14 @@ p {
 .sub__menu_list {
   display: none;
   position: absolute;
-  top: 18px;
+  top: 25px;
   width: 266px;
   border-radius: 50px;
   padding: 36px 0px 12px 0px; 
   margin-left: -10px;
+}
+.sub__menu_list.list_active {
+  display: block;
 }
 .sub__menu_list
 .sub_header_inner {
@@ -192,6 +198,7 @@ p {
   display: flex;
   align-items: center;
   padding-left: 15px;
+  color: #FFFFFF;
 }
 .sub_header_inner:hover{
   background: #FCD54C;
@@ -206,6 +213,9 @@ p {
   list-style: none;
   position: relative;
 }
+.sub__menu_list:hover {
+  color: #FCD54C;
+}
 
 .menu__list > li:hover .sub__menu_list {
   display: block;
@@ -214,6 +224,14 @@ p {
 .menu__nav_inner:hover {
   color:#FCD54C;
 }
+.menu__list:hover .sub__menu_list {
+  display: block;
+  color: #ffffff;
+}
+.menu__list  {
+  color: #ffffff;
+}
+
 .nav-indicator {
   position: absolute;
   left: 10px;
@@ -381,6 +399,7 @@ text-transform: uppercase;
 .header__slick_slider.slick-slide {
   max-width: 100%;
   max-height: 100%;
+  transition: 1.5s;
 }
 .slick-slide {
   max-width: 100%;
@@ -586,6 +605,8 @@ text-transform: uppercase;
 .slider__item img{
   width: 100%;
   height: 29.56vw;
+  transition: 1.5s;
+
 }
 .slider__item-text {
   color: #FFF;
@@ -628,6 +649,8 @@ text-transform: uppercase;
 .slider__inner {
   position: relative;
   width: 97%;
+  transition: 1.5s;
+
 }
 .slider__inner:hover .card__img img {
   opacity: 0;
@@ -1092,6 +1115,7 @@ padding-bottom: 54px;
 .clients__card_double.slick-slide {
   display: flex;
   justify-content: center;
+  transition: 1.5s;
 }
 .clients__card{
   position: relative;
@@ -1112,6 +1136,7 @@ padding-bottom: 54px;
 .clients__card_double.slick-center { 
   transform: scale(1.08);
   margin: 60px 20px 18px 20px;
+  transition: 1.5s;
 }
 .clients__card_double.slick-slide:not(.slick-active) { 
   opacity: 0.3;
@@ -1211,12 +1236,14 @@ padding-bottom: 54px;
 }
 .faqaccordion_card {
   position: relative;
+  transition: 3s;
 }
 .faqaccordion_card_title-content {
   display: flex;
   justify-content:space-between;
   align-content: center;
   padding-top: 20px;
+  transition: 3s;
 }
 .faqaccordion_card_title {
   color: #FFF;
@@ -1235,6 +1262,7 @@ padding-bottom: 54px;
   line-height: 22.4px;
   display: none;
   padding: 33px 65px 40px 65px;
+  transition: 3s;
 }
 .content_active .faqaccordion_card_arrow-right {
   display: none;
@@ -2908,9 +2936,10 @@ text-transform: capitalize;
 }
 .clients__card {
   width: 100%;
-  /* margin: 0 30px; */
+  margin: 0 -1px;
   margin-top: 80px;
 }
+
 .faq__inner {
   width: 450px;
 }
